--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "inline-css": "^3.0.0",
+    "mailgun-js": "^0.22.0",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
