--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "inline-css": "^3.0.0",
     "mailgun-js": "^0.22.0",
-    "next": "11.0.1",
+    "next": "^11.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-photo-gallery": "^8.0.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
